--- a/Front_end/style.css
+++ b/Front_end/style.css
@@ -1,12 +1,42 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .banner{
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url();
+    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(jeans.jpeg);
     background-size: cover;
     background-position: center;
+}
+.navbar{
+    width: 85%;
+    /* margin: auto; */
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.navbar ul li{
+    top: 100px;
+    list-style: none;
+    display: list-item;
+    position: relative;
+    margin-top: 5%;
+    /* margin-left: 4%; */
+    float: left;
+    top: 150px;
+    left: -300px;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+}
+.logo{
+    margin-top: -10%;
+    margin-left: -3%;
+    width: 30%;
+    z-index: 1;
 }
