--- a/Front_end/profiel.css
+++ b/Front_end/profiel.css
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
+    position: fixed;
 }
 .navbar ul li{
     top: 100px;
