--- a/Front_end/style.css
+++ b/Front_end/style.css
@@ -5,34 +5,30 @@
 }
 .banner{
     width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)),url(jeans.jpeg);
+    height: 100%;
+    background-image: linear-gradient(rgb(0, 27, 48),rgba(0,0,0,0.75));
     background-size: cover;
     background-position: center;
 }
 .navbar{
     width: 85%;
-    /* margin: auto; */
     padding: 35px 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    position: sticky;
+    position: fixed;
+    /* z-index: -1; */
 }
 .navbar ul li{
     top: 100px;
     list-style: none;
-    display: list-item;
     position: relative;
     margin-top: 5%;
-    /* margin-left: 4%; */
     float: left;
     top: 150px;
     left: -300px;
 }
 .navbar ul li a{
     text-decoration: none;
-    color: #fff;
     text-transform: uppercase;
 }
 .logo{
@@ -40,4 +36,41 @@
     margin-left: -3%;
     width: 30%;
     z-index: 1;
+}
+
+/* .banner .main_content{
+    width: 60%;
+    margin-left: 300px;
+}
+.banner .main_content .header{
+    padding: 20px;
+    background: transparent;
+    color: #717171;
+    border-bottom: 1px solid #e0e4e8;
+}
+.banner .main_content .info{
+    margin: 20px;
+    color: #717171;
+    line-height: 25px;
+}
+.banner .main_content .info div{
+    margin-bottom: 20px;
+} */
+
+.upload{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex-direction: column;
+    height: 100vh;
+    background-image: linear-gradient(rgb(0, 27, 48),rgba(0,0,0,0.75));
+}
+
+#display_image{
+    width: 375px;
+    height: 40%;
+    border: 1px solid black;
+    background-position: center;
+    background-size: cover;
 }
